--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,19 +1,19 @@
 .topbar{
     width: 100%;
     height: 50px;
-    background-color: white;
-    /*Topbar FIJO*/
-    position: sticky;
-    top: 0;
-    z-index: 999;
 }
 
-.topbarWrapper{
+.topWrapper{
     height: 100%;
     padding: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.topleft{
+
+
 }
 
 .topRight{
@@ -22,9 +22,9 @@
 }
 
 .logo{
-    font-weight: bold;
     font-size: 30px;
-    color:  blue;
+    font-weight: bold;
+    color: blue;
     cursor: pointer;
 }
 
@@ -32,11 +32,11 @@
     position: relative;
     cursor: pointer;
     margin-right: 15px;
+
 }
 
 .avatar{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    cursor: pointer;
 }
